--- a/d14/Cargo.toml
+++ b/d14/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
+ndarray = "0.14.0"
+itertools = "0.8.2"
+regex = "1"
